Added DFA for the last excercise

--- a/1/Makefile
+++ b/1/Makefile
@@ -1,4 +1,7 @@
-solution.pdf: solution.tex dfa.pdf
+solution.pdf: solution.tex dfa.pdf dpda.pdf
 	pdflatex solution.tex
 	pdflatex solution.tex
 	pdflatex solution.tex
+
+dfa.pdf: dfa.gv
+	dot -Tpdf dfa.gv > dfa.pdf
