--- a/2/Makefile
+++ b/2/Makefile
@@ -1,4 +1,8 @@
+all: solution.pdf dfa.pdf
 solution.pdf: solution.tex 
 	pdflatex solution.tex
 	pdflatex solution.tex
 	pdflatex solution.tex
+
+dfa.pdf: dfa.gv
+	dot -Tpdf dfa.gv > dfa.pdf
